[metadata]
name = deephaven-plugin-voice-table
description = deephaven.ui plugin to use voice to control a table
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1.dev0
keywords = deephaven, plugin, microphone, voice, table, deephaven.ui
author = Mike Bender
author_email = mikebender@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-plugin-ui
    deephaven-plugin-microphone
    openai-whisper==20231117
    rapidfuzz

[options.packages.find]
where=src
